--- a/src/main/webapp/css/BigImg_css_mobile.css
+++ b/src/main/webapp/css/BigImg_css_mobile.css
@@ -16,32 +16,26 @@
     position: absolute;
     width: 250px;
     height: 50px;
-    bottom: 7%;
+    margin-top: 100px;
     left: 50%;
     transform: translateX(-50%);
 }
 .button_css{
-    margin-right: 50px;
-    float: right;
     border-radius: 50%;
     background-color: black;
     border: 2px black solid;
-    width: 50px;
-    height: 50px;
+    width: 20px;
+    height: 20px;
     text-align: center;
 }
-.button_css:hover{
+.buttons:hover{
     background-color: bisque;
 }
 .heart_css{
     margin-top: 10px;
     width: 33px;
 }
-.back_css{
-    margin-right: 4px;
-    margin-top: 5px;
-    width: 40px;
-}
+
 /*.img_user{*/
     /*color: #5e5e5e;*/
     /*text-align: center;*/
@@ -64,31 +58,11 @@
     /*transform: translateX(-50%);*/
     /*top: 80%;*/
 /*}*/
-.lv_button_css{
-    position: absolute;
-    border-radius: 50%;
-    right: 3%;
-    bottom: 7%;
-    background-color: black;
-    border: 1px black solid;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-}
-.delete_css{
-    margin-top: 5px;
-    width: 40px;
-}
-.lv_button_css:hover{
-    background-color: bisque;
-}
 .upName {
-    position: absolute;
-    font-size: 8px;
+    text-align: center;
+    padding-top: 20px;
+    font-size: 20px;
     margin: auto;
     color: #5e5e5e;
     opacity: 0.8;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%)
 }
