--- a/src/main/webapp/css/imgUp.css
+++ b/src/main/webapp/css/imgUp.css
@@ -1,12 +1,12 @@
 .upImg_Big {
     position: relative;
     width: 92%;
-    height: 440px;
+    height: 530px;
     left: 50%;
     top: 20px;
     transform: translateX(-50%);
     background-color: white;
-    border: 2px #5e5e5e solid;
+    border: 2px #f2f2f2 solid;
     border-radius: 5px;
 }
 .upImg_small {
