--- a/src/main/webapp/css/srcMess_mobile.css
+++ b/src/main/webapp/css/srcMess_mobile.css
@@ -38,10 +38,11 @@
 .bigSrc_Big{
     width: 95%;
     height: auto;
+    padding-bottom: 20px;
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
-    border: 1px solid black;
+    border: 2px solid lightblue;
     background-color: white;
     border-radius: 10px;
 }
